# Stockfish_android

app/: build.gradle
app/src/androidTest/java/com/example/alex/buildstockfish/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/stockfish/: Android.mk  CMakeLists.txt  evaluate.cpp  native-lib.cpp
app/src/main/java/com/example/alex/buildstockfish/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/alex/buildstockfish/: ExampleUnitTest.java
